# event-sourcing-toy

./: .gitignore  CHANGELOG.md  es.cabal  schema.sql
app/: Main.hs  Service.hs  Store.hs  Types.hs
static/: app.js  index.html
