cabal-version:      2.4
name:               es
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ailrk
maintainer:         12954634+ailrk@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable es
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Store
      Types
      Service

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , sqlite-simple
      , aeson
      , containers
      , transformers
      , mtl
      , bytestring
      , text
      , stm
      , async
      , time
      , timestamp
      , servant
      , servant-server
      , servant-websockets
      , warp
      , websockets
    hs-source-dirs:   app
    default-language: Haskell2010
